# interoptopus

./: .gitignore
examples/real_project_layout/: Cargo.toml
examples/real_project_layout/core_library_ffi/: Cargo.toml
examples/real_project_layout/core_library_ffi_build/: Cargo.toml  build.rs
examples/rust_to_unity/: README.md
examples/rust_to_unity/cs_generator/: Cargo.toml  auto_version.rs  build.rs
examples/rust_to_unity/rust_bindings/: Cargo.toml
examples/rust_to_unity/rust_bindings/src/: lib.rs
examples/rust_to_unity/rust_library/: Cargo.toml
examples/salva/: Cargo.toml  Makefile.toml  build-unity.bat
examples/salva/.cargo/: config.toml
examples/salva/cs_generator/: Cargo.toml  auto_version.rs  build.rs
examples/salva/cs_generator/.cargo/: config.toml
examples/salva/rust_bindings/: Cargo.toml
examples/salva/rust_bindings/src/: fluid.rs  fluids_pipeline.rs  global_index.rs  lib.rs  math.rs
examples/salva_unity/: Cargo.toml
examples/salva_unity/cs_generator/: Cargo.toml  build.rs
examples/salva_unity/rust_bindings/: Cargo.toml
examples/salva_unity/rust_bindings/src/: all_examples3.rs  engine.rs  error.rs  faucet3.rs  fluid.rs  fluids_pipeline.rs  helper.rs  lib.rs  math.rs
examples/unity_hot_reload/src/: lib.rs
examples/unity_hot_reload/unity/Assets/MyRustLib/: Interop.cs  InteroptopusHotReload.cs
examples/unity_hot_reload/unity/ProjectSettings/: ProjectSettings.asset
