[workspace]
members = [
    "rust_library",
    "rust_bindings",
    "cs_generator"   # Has to be built after rust_bindings
]
resolver = "2"

[workspace.dependencies]
derive_builder = "0.20.2"
heck = "0.5.0"
log = "0.4.14"
serde = "1.0.203"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug-assertions = false

[profile.dev]
# Use slightly better optimization by default, as examples otherwise seem laggy.
opt-level = 3

[profile.release.build-override]
opt-level = 3
codegen-units = 1
debug-assertions = false
