[package]
name = "rust_bindings"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
parallel = ["rayon"]

[dependencies]
Inflector = "0.11"
nalgebra = "0.33"
rapier3d = "0.21"
parry3d = "0.16"
rust_library = { path = "../rust_library" }
interoptopus = { path = "../../../crates/core" }
once_cell = "1.20.2"
rayon = { version = "1.8", optional = true }

[dependencies.salva3d]
git = "https://github.com/LH1221002/salva.git" # Fork of: "https://github.com/dimforge/salva.git"
features = ["rapier", "sampling"]#, "opt-contacts", "opt-volume", "opt-weight"]

#[profile.release]
#opt-level = 1
#lto = true
#codegen-units = 1
#
#[profile.dev]
## Use slightly better optimization by default, as examples otherwise seem laggy.
#opt-level = 3
