[package]
name = "rust_bindings"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
parallel = [ "rapier_testbed3d/parallel", "salva3d/parallel"]

[dependencies]
num-traits = "0.2"
Inflector = "0.11"
nalgebra = "0.33"
rapier3d = "0.21"
rapier_testbed3d = "0.21" # REMOVE
parry3d = "0.16"
bevy = "0.13.2"
rust_library = { path = "../rust_library" }
interoptopus = { path = "../../../crates/core" }

[dependencies.salva3d]
git = "https://github.com/dimforge/salva.git"
features = ["rapier", "rapier-testbed", "sampling", "rapier-harness"]

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"

[target.wasm32-unknown-emscripten.dependencies]
stdweb = "0.4"

[target.asmjs-unknown-emscripten.dependencies]
stdweb = "0.4"

[[bin]]
name = "all_examples3"
path = "./src/all_examples3.rs"