[package]
name = "rust_bindings"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

#[features]
#default = []
#parallel = ["salva3d/parallel"]

[dependencies]
#Inflector = "0.11"
#nalgebra = "0.33"
#rapier3d = "0.21"
#parry3d = "0.16"
rust_library = { path = "../rust_library" }
interoptopus = { path = "../../../crates/core" }

#[dependencies.salva3d]
#git = "https://github.com/dimforge/salva.git"
#features = ["rapier", "rapier-testbed", "sampling", "rapier-harness"]


#[[bin]]
#name = "all_examples3"
#path = "./src/all_examples3.rs"
#
#[[bin]]
#name = "faucet3"
#path = "./src/faucet3.rs"